@@ -26,6 +26,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16601: Restarting iteration over tarfile no more continues from where
+  it left off.  Patch by Michael Birtwell.
+
 - Issue 16584: in filecomp._cmp, catch IOError as well as os.error.
   Patch by Till Maas.
 
